--- a/index.html
+++ b/index.html
@@ -165,14 +165,14 @@
     <div id="built-in-git" class="swimlane">
         <div class="container">
             <div class="row">
-                <div class="col-sm-4">
-                    <img src="./img/demo.svg" alt="开源实训" class="screenshot">
+                <div class="col-sm-5">
+                    <img src="./img/training.jpg" alt="开源实训" class="screenshot" style="width: 100%">
                 </div>
                 <div class="col-sm-7 col-sm-push-1">
                     <h2>开源实训</h2>
-                    <p>开源实训为开源软件的使用者和开发者提供培训服务，在实际操作中对受训人员进行知识传授、操作指导与能力评价，帮助他们快速地提升开源软件的使用、开发技能。</p>
+                    <p>开源实训围绕开源技术，为开发者和使用者提供集知识讲解、案例解析、开发实战、运行部署、实时评测、综合评估等于一体的智能化实训云服务，帮助他们迅速掌握核心开源技术，提升个人创新实践能力。</p>
                     <p>本版块当前包括以下服务：</p>
-                    <p><a href="">开源实训平台</a></p>
+                    <p><a href="https://www.educoder.net/">开源实训平台</a></p>
                 </div>
             </div>
         </div>
