--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
           	                <a class="navbar-brand" href=""><span itemprop="name">开源知识库</span></a>
           	            </div>
           	            <div class="navbar-collapse collapse">
-          	                <ul class="nav navbar-nav navbar-left">
+          	              <!--  <ul class="nav navbar-nav navbar-left">
           	                    <li><a id="nav-blogs" href="">博客</a></li>
           	                    <li><a id="nav-community" href="">社区</a></li>
           	                    <li class="search visible-xs"><a href="">搜索</a></li>
-          	                </ul>
+          	                </ul>  -->
           	
           	                <ul class="nav navbar-nav navbar-right">
           	                    <li>
@@ -82,7 +82,7 @@
           							<img class="search-icon-inverted" src="./img/search_dark.svg" width="16px" height="16px" alt="搜索">
           	                        </a>
           	                    </li>
-          	                    <li class="search">
+          	                <!--    <li class="search">
           	                        <form class="nav-search search-form">
           	                            <div class="input-group">
           	                                <input type="text" name="q" class="search-box form-control" placeholder="搜索博客">
@@ -94,7 +94,8 @@
           	                                </span>
           	                            </div>
           	                        </form>	                    </li>
-          	                </ul>
+          	                -->
+                            </ul>
           	            </div>
           	        </div>
           	    </nav>
@@ -157,6 +158,7 @@
                     <p>开源软件工程服务为开源软件项目的开发者、维护者以及开源软件的研究者提供开源软件开发维护的数据、方法和工具支持，帮助他们实现高效的开发和研究.</p>
                     <p>本版块当前包括以下服务：</p>
                     <p><a href="http://datahouse.trustie.org/">开源软件数据服务</a></p>
+                    <p><a href="https://trustie.educoder.net/competitions/gcc-annotation-2018/">开源项目标注服务</a></p>
                 </div>
             </div>
         </div>
